--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,11 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':hmsagents')
+   //  compile project(':hmsagents')
+    String HMSSDKVer ='2.6.0.301'
+    compile 'com.huawei.android.hms:iap:'+HMSSDKVer
+    compile 'com.huawei.android.hms:game:'+HMSSDKVer
+    compile 'com.huawei.android.hms:sns:'+HMSSDKVer
+    compile 'com.huawei.android.hms:hwid:'+HMSSDKVer
+    compile 'com.huawei.android.hms:push:'+HMSSDKVer
 }
